# projet_fil_rouge

./: .env  .gitignore  Dockerfile  README.md  analysis.py  calib_deer_robot.yaml  db_params_test.json  depth_timestamps.csv  key  key.pub  pyproject.toml  requirements.txt  rtabmap_calib.yaml  rtabmap_poses.txt  script.py  script_mac_win.py  test.py  video_cut.py
docs/: guide_calibration.md
notebooks/: plan2D.ipynb  plans_2D.ipynb  requirements.txt  utils_notebook.py  visualisation.ipynb
rtabmap/: rtabmap_script.py
rtabmap/rtabmap_params/: export_params.json  reprocess_params.json
run/: commande_rtabma.sh  docker_run_commande.sh
scripts/: calibrate.py  donwload_depth_anything.py  download_dataset.py  download_dataset_exp.py  download_depth_anything.py
src/: main.py  rtabmap_config.json  utils.py
src/depth/: generate_depth.py
src/rtabmap/: .env  rtabmap_script.py  tols.py
src/rtabmap/command/: export_command.sh  generate_db_command.sh  reprocess_command.sh
src/rtabmap/params/: db_params.json
src/rtabmap/script/: rtabmap.py  script_rtabmap.py  tols.py  tools.py
